# wxCharts

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  GNUmakefile  LICENSE.txt  README.md
.circleci/: config.yml
buildfiles/: wxcharts_files.cmake
docs/doxygen/: Doxyfile
docs/installation/: README.md
include/wxcharts/: wxareachartctrl.h  wxareachartoptions.h  wxbarchartctrl.h  wxboxplotctrl.h  wxbubblechart.h  wxcandlestickchartctrl.h  wxcandlestickchartoptions.h  wxchart.h  wxchartbackground.h  wxchartcommonoptions.h  wxchartmultitooltip.h  wxchartoptions.h  wxcharts.h  wxchartsarc.h  wxchartsarcoptions.h  wxchartscategoricalaxis.h  wxchartscircleoptions.h  wxchartsdataset.h  wxchartsdatasettheme.h  wxchartsdoubledataset.h  wxchartsgridmapping.h  wxchartslabelgroup.h  wxchartslabeloptions.h  wxchartslegendoptions.h  wxchartsohlcdata.h  wxchartspenoptions.h  wxchartsprecisiontheme.h  wxchartsradialgridoptions.h  wxcharttooltipprovider.h  wxcolumnchartdatasetoptions.h  wxcolumnchartoptions.h  wxcombinationchart.h  wxcombinationchartctrl.h  wxdoughnutandpiechartbase.h  wxhistogramoptions.h  wxmath2dplotctrl.h  wxmath2dplotoptions.h  wxstackedcolumnchartoptions.h
samples/: CMakeLists.txt
samples/areachart/: CMakeLists.txt  GNUmakefile
samples/areachart/src/: WxAreaChartApp.cpp  WxAreaChartApp.h  WxAreaChartFrame.cpp  WxAreaChartFrame.h  wxareachartapp.cpp  wxareachartapp.h  wxareachartframe.cpp  wxareachartframe.h
samples/bar/: GNUmakefile
samples/barchart/: CMakeLists.txt  GNUmakefile
samples/barchart/src/: wxbarchartapp.cpp  wxbarchartapp.h  wxbarchartframe.cpp  wxbarchartframe.h
samples/boxplot/: CMakeLists.txt  GNUmakefile
samples/boxplot/src/: WxBoxplotApp.cpp  WxBoxplotApp.h  WxBoxplotFrame.cpp  WxBoxplotFrame.h  WxBoxplotFrame1.h  wxboxplotapp.cpp  wxboxplotapp.h  wxboxplotframe.cpp  wxboxplotframe.h
samples/bubble/: CMakeLists.txt  GNUmakefile
samples/bubble/src/: WxBubbleApp.cpp  WxBubbleApp.h  WxBubbleFrame.cpp  WxBubbleFrame.h
samples/bubblechart/: GNUmakefile
samples/candlestick/: CMakeLists.txt  GNUmakefile
samples/candlestick/src/: WxCandlestickApp.h  WxCandlestickFrame.cpp  WxCandlestickFrame.h
samples/candlestickchart/: GNUmakefile
samples/column/: GNUmakefile
samples/columnchart/: CMakeLists.txt  GNUmakefile
samples/columnchart/src/: WxColumnApp.h  WxColumnFrame.cpp
samples/combinationchart/: CMakeLists.txt  GNUmakefile
samples/combinationchart/src/: WxCombinationChartApp.cpp  WxCombinationChartApp.h  WxCombinationChartFrame.cpp  WxCombinationChartFrame.h
samples/doughnutchart/: CMakeLists.txt  GNUmakefile
samples/doughnutchart/src/: wxdoughnutchartapp.cpp  wxdoughnutchartapp.h  wxdoughnutchartframe.cpp  wxdoughnutchartframe.h
samples/histogram/: CMakeLists.txt  GNUmakefile
samples/histogram/src/: WxHistogramChartApp.h  wxhistogramapp.cpp  wxhistogramapp.h  wxhistogramframe.cpp  wxhistogramframe.h
samples/line/: GNUmakefile
samples/linechart/: CMakeLists.txt  GNUmakefile
samples/linechart-vcpkg/: CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
samples/linechart-vcpkg/src/: wxlinechartapp.h  wxlinechartframe.cpp  wxlinechartframe.h
samples/linechart/src/: wxlinechartapp.cpp  wxlinechartframe.cpp  wxlinechartframe.h  wxlinechartmenubar.cpp  wxlinechartmenubar.h  wxlinechartwindowids.h
samples/math2d/: CMakeLists.txt  GNUmakefile
samples/math2d/src/: WxMath2DApp.cpp  WxMath2DApp.h  WxMath2DFrame.cpp  WxMath2DFrame.h
samples/math2dinteractive/: CMakeLists.txt  GNUmakefile
samples/math2dinteractive/src/: WxMath2DInteractiveApp.cpp  WxMath2DInteractiveApp.h  WxMath2DInteractiveFrame.cpp  WxMath2DInteractiveFrame.h
samples/ohlc/: CMakeLists.txt  GNUmakefile
samples/ohlc/src/: WxOHLCApp.cpp  WxOHLCApp.h  WxOHLCFrame.cpp  WxOHLCFrame.h
samples/piechart/: CMakeLists.txt  GNUmakefile
samples/piechart/src/: wxpiechartapp.cpp  wxpiechartapp.h  wxpiechartframe.cpp  wxpiechartframe.h
samples/polararea/: CMakeLists.txt  GNUmakefile
samples/polararea/src/: WxPolarAreaApp.cpp  WxPolarAreaApp.h  WxPolarAreaFrame.cpp  WxPolarAreaFrame.h
samples/radar/: CMakeLists.txt  GNUmakefile
samples/radar/src/: WxRadarApp.cpp  WxRadarApp.h  WxRadarFrame.cpp  WxRadarFrame.h
samples/scatterplot/: CMakeLists.txt  GNUmakefile
samples/scatterplot/src/: WxScatterPlotApp.cpp  WxScatterPlotApp.h  WxScatterPlotFrame.cpp  WxScatterPlotFrame.h
samples/sharedcategoricaldata/: CMakeLists.txt  GNUmakefile
samples/sharedcategoricaldata/src/: app.cpp  app.h  frame.cpp  frame.h
samples/stackedbarchart/: CMakeLists.txt  GNUmakefile
samples/stackedbarchart/src/: WxStackedBarApp.h  WxStackedBarFrame.cpp  WxStackedBarFrame.h
samples/stackedcolumnchart/: CMakeLists.txt  GNUmakefile
samples/stackedcolumnchart/src/: wxstackedcolumchartframe.h  wxstackedcolumnapp.h  wxstackedcolumnchartapp.cpp  wxstackedcolumnchartapp.h  wxstackedcolumnchartframe.cpp  wxstackedcolumnchartframe.h
samples/timeseries/: CMakeLists.txt  GNUmakefile
samples/timeseries/src/: wxtimeseriesapp.cpp  wxtimeseriesapp.h  wxtimeseriesframe.cpp  wxtimeseriesframe.h
src/: wxareachart.cpp  wxareachartctrl.cpp  wxareachartdatasetoptions.cpp  wxareachartoptions.cpp  wxbarchart.cpp  wxbarchartctrl.cpp  wxbarchartdata.cpp  wxbarchartdatasetoptions.cpp  wxbarchartoptions.cpp  wxboxplot.cpp  wxboxplotctrl.cpp  wxboxplotdatasetoptions.cpp  wxboxplotoptions.cpp  wxbubblechart.cpp  wxbubblechartctrl.cpp  wxbubblechartoptions.cpp  wxcandlestickchart.cpp  wxcandlestickchartctrl.cpp  wxcandlestickchartoptions.cpp  wxcategoricalscatterplot.cpp  wxcategoricalscatterplotctrl.cpp  wxcategoricalscatterplotoptions.cpp  wxchart.cpp  wxchartarc.cpp  wxchartarcoptions.cpp  wxchartaxis.cpp  wxchartaxisoptions.cpp  wxchartbackground.cpp  wxchartbackgroundoptions.cpp  wxchartcategoricalaxis.cpp  wxchartcircle.cpp  wxchartcircleoptions.cpp  wxchartcommonoptions.cpp  wxchartctrl.cpp  wxchartelement.cpp  wxchartfontoptions.cpp  wxchartgrid.cpp  wxchartgridmapping.cpp  wxchartgridoptions.cpp  wxchartlabel.cpp  (+119 more)
tests/: GNUmakefile
tests/src/: main.cpp  (+62 more)
(+229 files in other folders)
